fixed spacing on story view, shrank logout/stats

--- a/app/assets/stylesheets/site.css.scss
+++ b/app/assets/stylesheets/site.css.scss
@@ -66,5 +66,10 @@
   left: 10px;
   bottom: 75px;
   
-  
+  height:65px;
+}
+
+.reading-panel {
+  padding-right: 0px !Important;
+  padding-left: 0px !Important;
 }
